--- a/HalloAppClip/es.lproj/Localizable.strings
+++ b/HalloAppClip/es.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Comprueba si tienes conexión a Internet y vuelve a intentarlo.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Añadir";
+
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
