--- a/Notification Service Extension/fr.lproj/Localizable.strings
+++ b/Notification Service Extension/fr.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Assure-toi d'être bien connecté à Internet, puis réessaie.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Ajouter";
+
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
 "button.cancel" = "Annuler";
@@ -98,6 +101,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 vidéo";
+
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "message vocale";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contact inconnu";
