--- a/Notification Service Extension/cs.lproj/Localizable.strings
+++ b/Notification Service Extension/cs.lproj/Localizable.strings
@@ -99,6 +99,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 video";
 
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "🎤 Hlasová poznámka";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Neznámý kontakt";
 
