--- a/Notification Service Extension/el.lproj/Localizable.strings
+++ b/Notification Service Extension/el.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Παρακαλούμε ελέγξτε αν έχετε σύνδεση στο διαδίκτυο και δοκιμάστε ξανά.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Πρόσθεση";
+
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
 "button.cancel" = "Ακύρωση";
