--- a/Halloapp/el.lproj/Localizable.strings
+++ b/Halloapp/el.lproj/Localizable.strings
@@ -848,7 +848,7 @@
 /* A label for the button which leads to the page showing groups in common */
 "profile.groups.in.common" = "Κοινές Ομάδες";
 
-/* Text for messaging user under profile header */
+/* This is a verb.  The text is clickable, under a contact name and takes the user to the chat screen with that contact. It should not be translated as a noun. */
 "profile.header.message.user" = "Μήνυμα";
 
 /* Item in Profile > Help screen. */
